--- a/src/main/resources/ku/cs/accountDetail.fxml
+++ b/src/main/resources/ku/cs/accountDetail.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.AccountDetailController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.AccountDetailController">
     <children>
         <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <left>
@@ -103,39 +103,24 @@
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <children>
                         <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="197.0" layoutX="17.0" layoutY="18.0" stroke="#fffcf1" strokeType="INSIDE" width="661.0" />
-                        <Label layoutX="47.0" layoutY="33.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                        <Label layoutX="76.0" layoutY="126.0" text="วันเกิด">
                             <font>
-                                <Font name="JasmineUPC" size="36.0" />
+                                <Font name="JasmineUPC" size="30.0" />
                             </font>
                         </Label>
-                        <Label layoutX="335.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
+                        <Label layoutX="76.0" layoutY="90.0" text="รหัสผ่าน">
                             <font>
-                                <Font name="JasmineUPC" size="36.0" />
+                                <Font name="JasmineUPC" size="28.0" />
                             </font>
                         </Label>
-                        <Label layoutX="48.0" layoutY="73.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
+                        <Label layoutX="400.0" layoutY="90.0" text="เบอร์โทร">
                             <font>
-                                <Font name="JasmineUPC" size="36.0" />
+                                <Font name="JasmineUPC" size="30.0" />
                             </font>
                         </Label>
-                        <Label layoutX="47.0" layoutY="117.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
+                        <Label layoutX="400.0" layoutY="126.0" text="เพศ">
                             <font>
-                                <Font name="JasmineUPC" size="36.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="47.0" layoutY="155.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
-                            <font>
-                                <Font name="JasmineUPC" size="36.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="335.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
-                            <font>
-                                <Font name="JasmineUPC" size="36.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="335.0" layoutY="118.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
-                            <font>
-                                <Font name="JasmineUPC" size="36.0" />
+                                <Font name="JasmineUPC" size="30.0" />
                             </font>
                         </Label>
                   <Button layoutX="592.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
@@ -172,47 +157,69 @@
                             </font>
                         </Label>
                         <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="224.0" layoutY="449.0" startX="-210.39996337890625" startY="-3.0517578125E-5" />
-                        <Label fx:id="birthdayLabel" layoutX="454.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
+                  <HBox alignment="CENTER" layoutX="165.0" layoutY="126.0">
+                     <children>
+                              <Label fx:id="birthdayLabel" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
+                                  <font>
+                                      <Font name="JasmineUPC" size="25.0" />
+                                  </font>
+                              </Label>
+                        <Pane prefWidth="20.0" style="-fx-background-color: transparent;" />
+                              <Label fx:id="birthMonthLabel" text="Birthmonth" textAlignment="CENTER">
+                                  <font>
+                                      <Font name="JasmineUPC" size="24.0" />
+                                  </font>
+                              </Label>
+                        <Pane prefWidth="20.0" style="-fx-background-color: transparent;" />
+                              <Label fx:id="birthYearLabel" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
+                                  <font>
+                                      <Font name="JasmineUPC" size="25.0" />
+                                  </font>
+                              </Label>
+                     </children>
+                  </HBox>
+                        <Label fx:id="sexLabel" layoutX="494.0" layoutY="128.0" text="เพศ">
+                            <font>
+                                <Font name="JasmineUPC" size="24.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="phoneLabel" layoutX="496.0" layoutY="89.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เบอร์โทรศัพท์">
                             <font>
                                 <Font name="JasmineUPC" size="25.0" />
                             </font>
                         </Label>
-                        <Label fx:id="birthMonthLabel" layoutX="518.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthmonth" textAlignment="CENTER">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="birthYearLabel" layoutX="604.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="sexLabel" layoutX="455.0" layoutY="126.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เพศ">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="phoneLabel" layoutX="455.0" layoutY="82.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เบอร์โทรศัพท์">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="lastnameLabel" layoutX="180.0" layoutY="163.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="firstnameLabel" layoutX="180.0" layoutY="125.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="passwordLabel" layoutX="181.0" layoutY="81.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Password">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                        </Label>
-                        <Label fx:id="usernameLabel" layoutX="181.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                  <HBox alignment="CENTER" layoutX="50.0" layoutY="40.0">
+                     <children>
+                              <Label fx:id="usernameLabel" styleClass="font_rsu_20pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                                  <font>
+                                      <Font size="24.0" />
+                                  </font>
+                              </Label>
+                        <Text fill="#8e8e8e" strokeType="OUTSIDE" strokeWidth="0.0" text="  :  ">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Text>
+                              <Label fx:id="firstnameLabel" text="Firstname">
+                                  <font>
+                                      <Font name="JasmineUPC" size="30.0" />
+                                  </font>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                              </Label>
+                        <Pane prefWidth="30.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
+                              <Label fx:id="lastnameLabel" text="Lastname" textAlignment="CENTER">
+                                  <font>
+                                      <Font name="JasmineUPC" size="30.0" />
+                                  </font>
+                           <HBox.margin>
+                              <Insets top="5.0" />
+                           </HBox.margin>
+                              </Label>
+                     </children>
+                  </HBox>
+                        <Label fx:id="passwordLabel" layoutX="165.0" layoutY="88.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Password">
                             <font>
                                 <Font name="JasmineUPC" size="25.0" />
                             </font>
